src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: 'main';
  src: url('/fonts/main-font.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'second';
  src: url('/fonts/second.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}


body {
  margin: 0;
  font-family: 'Segoe UI', 'Roboto',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
html, body {
  max-width: 100%;
  overflow-x: hidden !important;
}

img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

@keyframes move {
  50% {
    transform: translateX(50px);
  }

  100% {
    transform: translateX(0);

  }
}

@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}

